[project]
name = "fig2sketch"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "Pillow==9.3.0",
    "fonttools==4.38.0",
    "appdirs==1.4.4",
]

[project.scripts]
fig2sketch = "fig2sketch:main"

[build-system]
requires = [ "setuptools>=41", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project.optional-dependencies]
fast = ["fig-kiwi==0.1.0"]
dev = [
    "black==22.10.0",
    "mypy==0.991",
    "pytest==7.2.0",
    "fig-kiwi==0.1.0",
]

[tool.black]
line-length = 99

[tool.pytest.ini_options]
pythonpath = ["src"]
