[project]
name = "fig2sketch"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "Pillow==11.1.0",
    "fonttools==4.43.0",
    "appdirs==1.4.4",
    "zstd==1.5.5.1",
]

[project.scripts]
fig2sketch = "fig2sketch:main"

[build-system]
requires = ["setuptools>=41", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project.optional-dependencies]
fast = ["fig-kiwi==0.1.1"]
dev = ["black==24.2.0", "mypy==0.991", "pytest==8.2.0", "fig-kiwi==0.1.1"]

[tool.black]
line-length = 99

[tool.pytest.ini_options]
pythonpath = ["src"]
