[package]
name = "fig_kiwi"
version = "0.1.0"
edition = "2021"

[lib]
name = "fig_kiwi"
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1.0.24" }
zip = { version = "0.6.3", default-features = false, features = [] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]
